# packages/api/src/models/SetScannersDeploymentTargetRequestInner.ts
@@ -1,0 +1,106 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Deployment Targets API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface SetScannersDeploymentTargetRequestInner
+ */
+export interface SetScannersDeploymentTargetRequestInner {
+    /**
+     * 
+     * @type {string}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    name: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    version: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    kind: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    provider: string;
+    /**
+     * 
+     * @type {object}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    config: object;
+    /**
+     * 
+     * @type {{ [key: string]: string; }}
+     * @memberof SetScannersDeploymentTargetRequestInner
+     */
+    labels: { [key: string]: string; };
+}
+
+/**
+ * Check if a given object implements the SetScannersDeploymentTargetRequestInner interface.
+ */
+export function instanceOfSetScannersDeploymentTargetRequestInner(value: object): value is SetScannersDeploymentTargetRequestInner {
+    if (!('name' in value) || value['name'] === undefined) return false;
+    if (!('version' in value) || value['version'] === undefined) return false;
+    if (!('kind' in value) || value['kind'] === undefined) return false;
+    if (!('provider' in value) || value['provider'] === undefined) return false;
+    if (!('config' in value) || value['config'] === undefined) return false;
+    if (!('labels' in value) || value['labels'] === undefined) return false;
+    return true;
+}
+
+export function SetScannersDeploymentTargetRequestInnerFromJSON(json: any): SetScannersDeploymentTargetRequestInner {
+    return SetScannersDeploymentTargetRequestInnerFromJSONTyped(json, false);
+}
+
+export function SetScannersDeploymentTargetRequestInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): SetScannersDeploymentTargetRequestInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'name': json['name'],
+        'version': json['version'],
+        'kind': json['kind'],
+        'provider': json['provider'],
+        'config': json['config'],
+        'labels': json['labels'],
+    };
+}
+
+export function SetScannersDeploymentTargetRequestInnerToJSON(value?: SetScannersDeploymentTargetRequestInner | null): any {
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'name': value['name'],
+        'version': value['version'],
+        'kind': value['kind'],
+        'provider': value['provider'],
+        'config': value['config'],
+        'labels': value['labels'],
+    };
+}
+
